Feat (Javascript) : Add Javascript Elements

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div id="mainContainer" class="container-fluid px-5">
-        <h1 class="text-center text-white mb-4">FizzBuzzDOM</h1>
+        <h1 class="text-center text-white mb-4 fw-bold">FizzBuzzDOM</h1>
         <div id="baseContainer">
         </div>
     </div>
